--- a/index.html
+++ b/index.html
@@ -135,6 +135,12 @@ html, body {
       <div class="slide active" style="background-image:url('images/Kuva 1.jpeg')"></div>
       <div class="slide" style="background-image:url('images/Kuva 2.jpeg')"></div>
       <div class="slide" style="background-image:url('images/Kuva 3.jpeg')"></div>
+      <!-- Added new photos (unchanged everything else) -->
+      <div class="slide" style="background-image:url('images/Kuva 4.jpeg')"></div>
+      <div class="slide" style="background-image:url('images/Kuva 5.jpeg')"></div>
+      <div class="slide" style="background-image:url('images/Kuva 6.jpeg')"></div>
+      <div class="slide" style="background-image:url('images/Kuva 7.jpeg')"></div>
+      <div class="slide" style="background-image:url('images/Kuva 8.jpeg')"></div>
     </section>
 
     <!-- Content will load here -->
