--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
   --muted: #a9adb6;
   --stroke: rgba(255, 255, 255, 0.08);
   --panel: rgba(20, 20, 24, 0.5);
-  --c-selli: #8b0000; /* deep dark red */
-  --c-mimmi: #006666; /* deep dark turquoise */
-  --c-meri: #8B5A00;  /* deep dark amber */
+  --c-selli: #8b0000;
+  --c-mimmi: #006666;
+  --c-meri: #8B5A00;
 }
 
 * { box-sizing: border-box; }
@@ -114,6 +114,18 @@ html, body {
   cursor: pointer;
 }
 .ws-wave { height: 64px; }
+
+/* Embed styles */
+.soolo-grid {
+  display:grid;
+  gap:16px;
+  grid-template-columns: repeat(auto-fill, minmax(320px, 1fr));
+}
+.embed { width:100%; border-radius:12px; overflow:hidden; border:1px solid var(--stroke); background:rgba(255,255,255,0.04); }
+.embed-16x9 { position:relative; padding-top:56.25%; }
+.embed-16x9 iframe { position:absolute; inset:0; width:100%; height:100%; }
+.embed-spotify iframe { width:100%; height:152px; }
+.soolo-card .soolo-embeds { display:grid; gap:12px; }
 </style>
 </head>
 <body>
@@ -125,7 +137,7 @@ html, body {
       <a class="cat" data-cat="soolotuotanto" href="#">Soolotuotanto</a>
       <a class="cat" data-cat="teatteri" href="#">Teatteri / Äänisuunnittelu</a>
       <a class="cat" data-cat="elektroninen" href="#">Elektroninen / Kokeellinen</a>
-      <a class="cat" data-cat="yhteys" href="#">Yhteystiedot</a>
+      <a class="cat" data-cat="yhteys" href="#">Palvelut / Yhteystiedot</a>
     </div>
   </aside>
 
@@ -135,7 +147,6 @@ html, body {
       <div class="slide active" style="background-image:url('images/Kuva 1.jpeg')"></div>
       <div class="slide" style="background-image:url('images/Kuva 2.jpeg')"></div>
       <div class="slide" style="background-image:url('images/Kuva 3.jpeg')"></div>
-      <!-- Added new photos (unchanged everything else) -->
       <div class="slide" style="background-image:url('images/Kuva 4.jpeg')"></div>
       <div class="slide" style="background-image:url('images/Kuva 5.jpeg')"></div>
       <div class="slide" style="background-image:url('images/Kuva 6.jpeg')"></div>
@@ -159,90 +170,31 @@ setInterval(() => {
   slides[idx].classList.add('active');
 }, 7000);
 
+// Helper to make audio cards
+function audioCard(file, title, folder) {
+  return `<div class="ws-card" data-audio="${encodeURI(`audio/${folder}/${file}`)}" data-title="${title}"></div>`;
+}
+
 // Content templates
 const content = {
   bio: `
     <section class="panel">
       <h1>Niko Aaltonen</h1>
       <p>Säveltäjä • äänisuunnittelija • monialainen taiteilija</p>
-      <p>Niko Aaltonen on säveltäjä, äänisuunnittelija ja monialainen taiteilija Turusta. Hänen taustansa musiikkituotannon ja teatterin parissa näkyy työssä, jossa yhdistyvät tunnelmalliset äänimaisemat ja vahva emotionaalinen syvyys. Niko luo musiikkia ja äänisuunnittelua, jotka kertovat tarinoita, herättävät muistoja ja tukevat esitysten visuaalista ja dramaturgista kokonaisuutta. Hänen äänimaailmansa liikkuvat klassisen musiikin, pop/rockin ja elektronisen kokeellisuuden välillä – rajoja pelottomasti rikkoen. Nikon musiikillinen polku alkoi jo nuorena, kun hän osti ensimmäisen kitaransa. Vuosien varrella hän on syventynyt intohimoisesti musiikin eri osa-alueisiin ja opiskellut laajasti useita genrejä ja soittimia, kuten bassoa, rumpuja ja laulua. Hän valmistui muusikoksi Turun konservatoriosta ja palveli tämän jälkeen Puolustusvoimien varusmiessoittokunnassa, josta hän valmistui aliupseerina. Tällä hetkellä Niko opiskelee musiikkipedagogiksi ja jatkaa monipuolista musiikin tekemistä eri muodoissa.</p>
+      <p>Niko Aaltonen on säveltäjä, äänisuunnittelija ja monialainen taiteilija Turusta. Hänen taustansa musiikkituotannon ja teatterin parissa näkyy työssä, jossa yhdistyvät tunnelmalliset äänimaisemat ja vahva emotionaalinen syvyys. Niko luo musiikkia ja äänisuunnittelua, jotka kertovat tarinoita, herättävät muistoja ja tukevat esitysten visuaalista ja dramaturgista kokonaisuutta. Hänen äänimaailmansa liikkuvat klassisen musiikin, pop/rockin ja elektronisen kokeellisuuden välillä – rajoja pelottomasti rikkoen. Nikon musiikillinen polku alkoi jo nuorena, kun hän osti ensimmäisen kitaransa. Vuosien varrella hän on syventynyt intohimoisesti musiikin eri osa-alueisiin ja opiskellut laajasti useita genrejä ja soittimia, kuten bassoa, rumpuja ja laulua. Hän valmistui muusikoksi Turun konservatoriosta ja palveli tämän jälkeen Puolustusvoimien varusmiessoittokunnassa, josta hän valmistui aliupseerina. Tällä hetkellä Niko opiskelee huilunsoittoa Turun ammattikorkeakoulussa ja jatkaa musiikin tekemistä monipuolisesti eri muodoissa.</p>
     </section>
   `,
-  soolotuotanto: `<section class="panel"><h2>Tulossa...</h2></section>`,
-  teatteri: `
-    <section class="panel" style="background:var(--panel)">
-      <h2>Selli</h2>
-      <div class="ws-card" data-audio="audio/selli_2naytos6kohtaus.mp3" data-title="Teeman huipennus"></div>
-      <div class="ws-card" data-audio="audio/selli_4naytos1kohtaus.mp3" data-title="Järkensä menettänyt"></div>
+  soolotuotanto: `
+    <section class="panel">
+      <h2>Soolotuotanto</h2>
+      <p>Valikoituja julkaisuja ja äänitteitä.</p>
     </section>
-    <section class="panel" style="background:var(--panel)">
-      <h2>Mimmilehmän ja Variksen kesäpäivä laitumella</h2>
-      <div class="ws-card" data-audio="audio/Intromusa.mp3" data-title="Intromusa"></div>
-      <div class="ws-card" data-audio="audio/Jännitys ja Skrätsi.mp3" data-title="Jännitys ja Skrätsi"></div>
-    </section>
-    <section class="panel" style="background:var(--panel)">
-      <h2>Merituulet</h2>
-      <div class="ws-card" data-audio="audio/Merituulet.mp3" data-title="Merituulet"></div>
-    </section>
-  `,
-  elektroninen: `<section class="panel"><h2>Tulossa...</h2></section>`,
-  yhteys: `<section class="panel"><h2>Yhteystiedot</h2><p>sinun.sahkoposti@esimerkki.com</p></section>`
-};
-
-// Category colors
-const bgColors = {
-  bio: "#111",
-  soolotuotanto: "#222",
-  teatteri: "linear-gradient(180deg, var(--c-selli), var(--c-mimmi), var(--c-meri))",
-  elektroninen: "#222",
-  yhteys: "#111"
-};
-
-function loadContent(cat) {
-  document.getElementById('content-area').innerHTML = content[cat];
-  document.body.style.background = bgColors[cat];
-  initPlayers();
-}
-
-document.querySelectorAll('.cat').forEach(link => {
-  link.addEventListener('click', e => {
-    e.preventDefault();
-    loadContent(link.dataset.cat);
-  });
-});
-
-// Wavesurfer init
-function initPlayers() {
-  document.querySelectorAll('.ws-card').forEach(card => {
-    const url = card.dataset.audio;
-    const title = card.dataset.title;
-    card.innerHTML = `
-      <div><strong>${title}</strong></div>
-      <div class="ws-row">
-        <button class="ws-play">▶</button>
-        <div class="ws-wave"></div>
-      </div>
-    `;
-    const ws = WaveSurfer.create({
-      container: card.querySelector('.ws-wave'),
-      waveColor: 'rgba(255,255,255,0.4)',
-      progressColor: 'rgba(255,255,255,0.8)',
-      height: 64,
-      barWidth: 2,
-      barRadius: 2,
-      responsive: true,
-      url: url
-    });
-    const btn = card.querySelector('.ws-play');
-    btn.addEventListener('click', () => {
-      ws.playPause();
-      btn.textContent = ws.isPlaying() ? '⏸' : '▶';
-    });
-  });
-}
-
-// Load default view
-loadContent('bio');
-</script>
-</body>
-</html>
+    <section class="soolo-grid">
+      <div class="soolo-card panel">
+        <h3>Julkaisu</h3>
+        <div class="soolo-embeds">
+          <div class="embed embed-spotify">
+            <iframe src="https://open.spotify.com/embed/track/4xiEQA4enJbKFnzzgcbjqj" frameborder="0" allow="autoplay; clipboard-write; encrypted-media; picture-in-picture"></iframe>
+          </div>
+          <div class="embed embed-16x9">
+            <iframe sr
