--- a/index.html
+++ b/index.html
@@ -1,14 +1,13 @@
 <!DOCTYPE html>
 <html lang="fi">
 <head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<meta charset="UTF-8" />
+<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 <title>Niko Aaltonen — Portfolio</title>
 <style>
 :root{
   --ink:#e9ebef; --muted:#a9adb6; --stroke:rgba(255,255,255,.08);
   --panel:rgba(20,20,24,.5);
-  /* subtle deep tones per section */
   --c-bio:#0f1115; --c-soolo:#151722; --c-teat:#1b1a1d;
   --c-elek:#131a1a; --c-ytx:#101318;
 }
@@ -37,7 +36,7 @@ html,body{
   border-radius:12px;padding:18px;backdrop-filter:blur(8px);margin-bottom:20px
 }
 
-/* Hero: no dark corners */
+/* Hero */
 .hero{border-radius:12px;overflow:hidden;position:relative;height:min(48vh,520px)}
 .slide{position:absolute;inset:0;opacity:0;transition:opacity 1.2s ease-in-out}
 .slide.active{opacity:1}
@@ -65,11 +64,11 @@ html,body{
 <div class="wrap">
   <aside class="sidebar">
     <div class="side-grid">
-      <a class="cat active" data-cat="bio" href="#">Bio</a>
-      <a class="cat" data-cat="soolotuotanto" href="#">Soolotuotanto</a>
-      <a class="cat" data-cat="teatteri" href="#">Teatteri / Äänisuunnittelu</a>
-      <a class="cat" data-cat="elektroninen" href="#">Elektroninen / Kokeellinen</a>
-      <a class="cat" data-cat="yhteys" href="#">Palvelut / Yhteystiedot</a>
+      <a class="cat" href="#bio"           data-cat="bio">Bio</a>
+      <a class="cat" href="#soolotuotanto" data-cat="soolotuotanto">Soolotuotanto</a>
+      <a class="cat" href="#teatteri"      data-cat="teatteri">Teatteri / Äänisuunnittelu</a>
+      <a class="cat" href="#elektroninen"  data-cat="elektroninen">Elektroninen / Kokeellinen</a>
+      <a class="cat" href="#yhteys"        data-cat="yhteys">Palvelut / Yhteystiedot</a>
     </div>
   </aside>
 
@@ -90,71 +89,181 @@ html,body{
   </main>
 </div>
 
+<!-- Wavesurfer first -->
 <script src="https://unpkg.com/wavesurfer.js@7"></script>
+
 <script>
-// ===== Slideshow =====
-const slides = document.querySelectorAll('.slide');
-let idx = 0;
-setInterval(() => {
-  slides[idx].classList.remove('active');
-  idx = (idx + 1) % slides.length;
-  slides[idx].classList.add('active');
-}, 7000);
+document.addEventListener('DOMContentLoaded', () => {
+  /* ===== Slideshow (runs after DOM ready) ===== */
+  const slides = document.querySelectorAll('.slide');
+  let idx = 0;
+  if (slides.length) {
+    setInterval(() => {
+      slides[idx].classList.remove('active');
+      idx = (idx + 1) % slides.length;
+      slides[idx].classList.add('active');
+    }, 7000);
+  }
 
-// ===== Helpers =====
-function audioCard(file, title, folder) {
-  const url = encodeURI('audio/' + folder + '/' + file);
-  return `
-    <div class="ws-card" data-file="${url}">
-      <div><strong>${title}</strong></div>
-      <div class="ws-row">
-        <button class="ws-play" data-state="idle">▶</button>
-        <div class="ws-wave"></div>
-        <div class="ws-time">0:00 / 0:00</div>
-      </div>
-    </div>`;
-}
-const fmtTime = s => {
-  if (!isFinite(s)) return "0:00";
-  const m = Math.floor(s/60);
-  const sec = Math.floor(s%60).toString().padStart(2,'0');
-  return `${m}:${sec}`;
-};
+  /* ===== Helpers ===== */
+  function audioCard(file, title, folder) {
+    const url = encodeURI('audio/' + folder + '/' + file);
+    return (
+`<div class="ws-card" data-file="${url}">
+  <div><strong>${title}</strong></div>
+  <div class="ws-row">
+    <button class="ws-play" data-state="idle">▶</button>
+    <div class="ws-wave"></div>
+    <div class="ws-time">0:00 / 0:00</div>
+  </div>
+</div>`
+    );
+  }
+  const fmtTime = s => {
+    if (!isFinite(s)) return "0:00";
+    const m = Math.floor(s/60);
+    const sec = Math.floor(s%60).toString().padStart(2,'0');
+    return `${m}:${sec}`;
+  };
 
-// Track/destroy players on tab change
-let wsInstances = [];
-function destroyPlayers(){ wsInstances.forEach(ws=>{ try{ws.destroy()}catch(e){} }); wsInstances=[]; }
+  let wsInstances = [];
+  function destroyPlayers(){ wsInstances.forEach(ws=>{ try{ws.destroy()}catch(e){} }); wsInstances=[]; }
 
-// Lazy-init players on first click
-function wirePlayers(scope=document){
-  scope.querySelectorAll('.ws-card').forEach(card=>{
-    let ws=null;
-    const btn=card.querySelector('.ws-play');
-    const wave=card.querySelector('.ws-wave');
-    const time=card.querySelector('.ws-time');
-    const url=card.dataset.file;
+  function wirePlayers(scope=document){
+    scope.querySelectorAll('.ws-card').forEach(card=>{
+      let ws=null;
+      const btn=card.querySelector('.ws-play');
+      const wave=card.querySelector('.ws-wave');
+      const time=card.querySelector('.ws-time');
+      const url=card.dataset.file;
 
-    const ensureWS=()=>{
-      if (ws) return ws;
-      ws = WaveSurfer.create({
-        container: wave,
-        waveColor:'rgba(255,255,255,0.4)',
-        progressColor:'rgba(255,255,255,0.8)',
-        height:64, barWidth:2, barRadius:2, responsive:true,
-        url
-      });
-      wsInstances.push(ws);
-      ws.on('ready', ()=>{ time.textContent = `0:00 / ${fmtTime(ws.getDuration())}`; });
-      const onTick = (t)=>{ time.textContent = `${fmtTime(t)} / ${fmtTime(ws.getDuration())}`; };
-      ws.on('timeupdate', onTick);
-      ws.on('audioprocess', onTick);
-      ws.on('pause', ()=>{ btn.textContent='▶'; });
-      ws.on('play',  ()=>{ btn.textContent='⏸'; });
-      return ws;
-    };
+      const ensureWS=()=>{
+        if (ws) return ws;
+        ws = WaveSurfer.create({
+          container: wave,
+          waveColor:'rgba(255,255,255,0.4)',
+          progressColor:'rgba(255,255,255,0.8)',
+          height:64, barWidth:2, barRadius:2, responsive:true,
+          url
+        });
+        wsInstances.push(ws);
+        ws.on('ready', ()=>{ time.textContent = `0:00 / ${fmtTime(ws.getDuration())}`; });
+        const onTick = (t)=>{ time.textContent = `${fmtTime(t)} / ${fmtTime(ws.getDuration())}`; };
+        ws.on('timeupdate', onTick);
+        ws.on('audioprocess', onTick);
+        ws.on('pause', ()=>{ btn.textContent='▶'; });
+        ws.on('play',  ()=>{ btn.textContent='⏸'; });
+        return ws;
+      };
 
-    btn.addEventListener('click', ()=>{ ensureWS().playPause(); });
-  });
-}
+      btn.addEventListener('click', ()=>{ ensureWS().playPause(); });
+    });
+  }
 
-// ====
+  /* ===== Content ===== */
+  const content = {
+    bio: `
+      <section class="panel">
+        <h1>Niko Aaltonen</h1>
+        <p>Säveltäjä • äänisuunnittelija • monialainen taiteilija</p>
+        <p>Niko Aaltonen on säveltäjä, äänisuunnittelija ja monialainen taiteilija Turusta. Hänen taustansa musiikkituotannon ja teatterin parissa näkyy työssä, jossa yhdistyvät tunnelmalliset äänimaisemat ja vahva emotionaalinen syvyys. Niko luo musiikkia ja äänisuunnittelua, jotka kertovat tarinoita, herättävät muistoja ja tukevat esitysten visuaalista ja dramaturgista kokonaisuutta. Hänen äänimaailmansa liikkuvat klassisen musiikin, pop/rockin ja elektronisen kokeellisuuden välillä – rajoja pelottomasti rikkoen. Nikon musiikillinen polku alkoi jo nuorena, kun hän osti ensimmäisen kitaransa. Vuosien varrella hän on syventynyt intohimoisesti musiikin eri osa-alueisiin ja opiskellut laajasti useita genrejä ja soittimia, kuten bassoa, rumpuja ja laulua. Hän valmistui muusikoksi Turun konservatoriosta ja palveli tämän jälkeen Puolustusvoimien varusmiessoittokunnassa, josta hän valmistui aliupseerina. Tällä hetkellä Niko opiskelee huilunsoittoa Turun ammattikorkeakoulussa ja jatkaa musiikin tekemistä monipuolisesti eri muodoissa.</p>
+      </section>
+    `,
+    soolotuotanto: `
+      <section class="panel">
+        <h2>Soolotuotanto</h2>
+        <p>Valikoituja julkaisuja ja äänitteitä.</p>
+      </section>
+
+      <section class="soolo-grid">
+        <div class="soolo-card panel">
+          <h3>Julkaisu</h3>
+          <div class="soolo-embeds">
+            <div class="embed embed-spotify">
+              <iframe loading="lazy" src="https://open.spotify.com/embed/track/4xiEQA4enJbKFnzzgcbjqj" frameborder="0" allow="autoplay; clipboard-write; encrypted-media; picture-in-picture"></iframe>
+            </div>
+            <div class="embed embed-16x9">
+              <iframe loading="lazy" src="https://www.youtube.com/embed/Juo7VjB8-1w?rel=0&modestbranding=1" title="YouTube video" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            </div>
+          </div>
+        </div>
+      </section>
+
+      <section class="panel">
+        <h3>Äänitteet</h3>
+        ${audioCard("Halusin Kertoo.mp3", "Halusin Kertoo", "soolotuotanto")}
+        ${audioCard("Taitelija.mp3", "Taitelija", "soolotuotanto")}
+      </section>
+    `,
+    teatteri: `
+      <section class="panel"><h2>Selli</h2>
+        ${audioCard("selli_2naytos6kohtaus.mp3", "Teeman huipennus", "teatteri_aanisuunnittelu")}
+        ${audioCard("selli_4naytos1kohtaus.mp3", "Järkensä menettänyt", "teatteri_aanisuunnittelu")}
+      </section>
+      <section class="panel"><h2>Mimmilehmän ja Variksen kesäpäivä laitumella</h2>
+        ${audioCard("Intromusa.mp3", "Intromusa", "teatteri_aanisuunnittelu")}
+        ${audioCard("Jännitys ja Skrätsi.mp3", "Jännitys ja Skrätsi", "teatteri_aanisuunnittelu")}
+        ${audioCard("Varis odottaa.mp3", "Varis odottaa", "teatteri_aanisuunnittelu")}
+        ${audioCard("39. Toka tanssi.mp3", "Toka tanssi", "teatteri_aanisuunnittelu")}
+        ${audioCard("Viimeinen tanssi.mp3", "Viimeinen tanssi", "teatteri_aanisuunnittelu")}
+      </section>
+      <section class="panel"><h2>Merituulet</h2>
+        ${audioCard("Merituulet.mp3", "Merituulet", "teatteri_aanisuunnittelu")}
+      </section>
+    `,
+    elektroninen: `
+      <section class="panel"><h2>Elektroninen / Kokeellinen</h2>
+        ${audioCard("1. Elämä on työ.mp3", "Elämä on työ", "elektroninen")}
+        ${audioCard("2. Isompikubeatles.mp3", "Isompikubeatles", "elektroninen")}
+        ${audioCard("3. Laskut.mp3", "Laskut", "elektroninen")}
+        ${audioCard("4. Oot Ruma.mp3", "Oot Ruma", "elektroninen")}
+        ${audioCard("5. Salaisestiseksikäs_instr.mp3", "Salaisestiseksikäs (instr.)", "elektroninen")}
+        ${audioCard("6. Dundun.mp3", "Dundun", "elektroninen")}
+      </section>
+    `,
+    yhteys: `
+      <section class="panel">
+        <h2>Palvelut / Yhteystiedot</h2>
+        <h3>Sävellys</h3>
+        <p>Teen sävellyksiä klassisesta musiikista teatteri- ja elokuvamusiikkiin sekä kokonaisiin ääniraitoihin — mihin tahansa projektiin, jonka haluat herättää eloon.</p>
+        <h3>Laulunkirjoitus</h3>
+        <p>Kirjoitan kappaleita popista, rockista ja metallista aina sooloartistien biitteihin asti. Älä epäröi pyytää myös muiden tyylilajien teoksia.</p>
+        <h3>Miksaus</h3>
+        <p>Miksaan kappaleesi tuoden siihen selkeyttä, syvyyttä ja viimeistellyn soinnin.</p>
+        <h3>Kitara-, basso- ja huilutunnit</h3>
+        <p>35€/h. Voimme luoda pitkäaikaisemman suunnitelman taitojesi kehittämiseksi tai keskittyä yksittäisiin ongelmiin, joissa koet olevasi jumissa.</p>
+        <h3>Sävellys- ja laulunkirjoitusopetus</h3>
+        <p>Mahdollista pyynnöstä!</p>
+        <h3>Yhteystiedot</h3>
+        <p>Puhelin: 045 110 7090 <em>(soitto, tekstiviesti, WhatsApp)</em><br>
+           Sähköposti: aaltonenniko989@gmail.com</p>
+      </section>
+    `
+  };
+
+  /* ===== Backgrounds + nav highlight ===== */
+  const bgColors = {
+    bio: "var(--c-bio)",
+    soolotuotanto: "var(--c-soolo)",
+    teatteri: "var(--c-teat)",
+    elektroninen: "var(--c-elek)",
+    yhteys: "var(--c-ytx)"
+  };
+
+  function renderFromHash() {
+    const cat = (location.hash.replace('#','') || 'bio');
+    if (!content[cat]) return;
+    destroyPlayers();
+    document.getElementById('content-area').innerHTML = content[cat];
+    document.body.style.background = bgColors[cat] || "var(--c-bio)";
+    document.querySelectorAll('.cat').forEach(a =>
+      a.classList.toggle('active', a.dataset.cat === cat)
+    );
+    wirePlayers(document.getElementById('content-area'));
+  }
+  window.addEventListener('hashchange', renderFromHash);
+  renderFromHash(); // initial render
+});
+</script>
+</body>
+</html>
